--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <title>多功能可交互时钟</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <style>
-        .nav-frame {
-            width: 100px;
-            transition: width 0.3s;
-        }
-        .collapsed {
-            width: 5px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
 <body>
@@ -23,12 +15,7 @@
         <iframe src="nav.html" class="nav-frame" style="height: 100vh;" frameborder="0" scrolling="no"></iframe>
         <iframe src="clock.html" name="content" style="width: 80%; height: 100vh;" frameborder="0" scrolling="no"></iframe>
     </div>
-    <script>
-        document.getElementById('toggleButton').addEventListener('click', function() {
-            var navFrame = document.querySelector('.nav-frame');
-            navFrame.classList.toggle('collapsed');
-        });
-    </script>
+    <script src = './index.js'></script>
 </body>
 
 </html>
