--- a/stopWatchPage.html
+++ b/stopWatchPage.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Stopwatch</title>
-    <style>
-        #stopwatch {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./stopwatch.css">
 </head>
 <body>
     <div id="stopwatch">00:00:00.000</div>
