--- a/timerPage.html
+++ b/timerPage.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexible Timer</title>
-    <style>
-        #timerDisplay {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./timer.css">
 </head>
 <body>
     <input type="number" id="hours" value="0" min="0" step="1">
