debug filename error

--- a/nav.html
+++ b/nav.html
@@ -17,13 +17,13 @@
             <a href="clock.html" target="content">时钟</a>
         </div>
         <div class="divItem">
-            <a href="alarmPage.html" target="content">闹钟</a>
+            <a href="alarmpage.html" target="content">闹钟</a>
         </div>
         <div class="divItem">
-            <a href="stopWatchPage.html" target="content">秒表</a>
+            <a href="stopwatchpage.html" target="content">秒表</a>
         </div>
         <div class = "divItem">
-            <a href="timerPage.html" target="content">计时器</a>
+            <a href="timerpage.html" target="content">计时器</a>
         </div>
     </main>
 </body>
