--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <button id="toggleButton">收起/展开</button>
-    <div style="display: flex;" id="frame">
-        <iframe src="nav.html" class="nav-frame" style="height: 100vh;" frameborder="0" scrolling="no"></iframe>
-        <iframe src="clock.html" name="content" style="width: 80%; height: 100vh;" frameborder="0" scrolling="no"></iframe>
+    <button id="toggleButton">
+        <svg t="1720668994708" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="8914" width="20" height="20">
+            <path d="M897.13 157.99H127.99c-16.57 0-30-13.43-30-30s13.43-30 30-30h769.14c16.57 0 30 13.43 30 30s-13.44 30-30 30zM897.13 925.64H127.99c-16.57 0-30-13.43-30-30s13.43-30 30-30h769.14c16.57 0 30 13.43 30 30s-13.44 30-30 30zM897.13 416.15H450.55c-17.83 0-32.28-14.45-32.28-32.28s14.45-32.28 32.28-32.28h446.57c17.83 0 32.28 14.45 32.28 32.28s-14.45 32.28-32.27 32.28zM897.13 672.03H450.55c-17.83 0-32.28-14.45-32.28-32.28s14.45-32.28 32.28-32.28h446.57c17.83 0 32.28 14.45 32.28 32.28s-14.45 32.28-32.27 32.28zM105.34 523.65l221.78 143.09c9.54 6.15 22.1-0.69 22.1-12.04V368.52c0-11.35-12.57-18.2-22.1-12.04L105.34 499.57c-8.75 5.64-8.75 18.44 0 24.08z" p-id="8915" fill="#707070"></path>
+        </svg>
+    </button>  
+    <div id="frame">
+        <iframe src="nav.html" id = "nav">
+        </iframe>
+        <iframe src="clock.html" id = "clock" name="content"></iframe>
     </div>
     <script src = './index.js'></script>
 </body>
