--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <main class="bg">       
+    <main class="bg">
+        <!-- 四个功能：时钟、闹钟、秒表、计时器 -->
         <div class="divItem">
             <a href="clock.html" target="content">时钟</a>
         </div>
