--- a/alarmpage.html
+++ b/alarmpage.html
@@ -3,12 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Alarm Clock</title>
+    <link rel="stylesheet" type="text/css" href="./alarm.css">
 </head>
 <body>
-    <h1>设置闹钟</h1>
-    <input type="time" id="alarmTime" placeholder="选择时间">
-    <button onclick="setAlarm()">设置闹钟</button>
-    <button onclick="stopAlarm()">关闭闹钟</button>
+    <!-- grid布局：支持多闹钟 -->
+    <div id = "grid">
+        <div class = "alarmModule", id = "pos1">
+            <h1>设置闹钟</h1>
+            <input type="time" id="alarmTime" placeholder="选择时间">
+            <button onclick="setAlarm()">设置闹钟</button>
+            <button onclick="stopAlarm()">关闭闹钟</button>
+        </div>
+        <div class = "alarmModule", id = "pos2">
+            <h1>设置闹钟</h1>
+            <input type="time" id="alarmTime" placeholder="选择时间">
+            <button onclick="setAlarm()">设置闹钟</button>
+            <button onclick="stopAlarm()">关闭闹钟</button>
+        </div>
+        <div class = "alarmModule", id = "pos3">
+            <h1>设置闹钟</h1>
+            <input type="time" id="alarmTime" placeholder="选择时间">
+            <button onclick="setAlarm()">设置闹钟</button>
+            <button onclick="stopAlarm()">关闭闹钟</button>
+        </div>
+    </div>
+    <!-- 编辑按钮 -->
+    <div id = "editButton">
+        <button class = "operation">
+            <svg t="1720690146290" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3864" width="40" height="40">
+                <path d="M517.8 795.56c-9.93 0-17.98-8.04-18-17.97l-0.88-533.4c-0.02-9.94 8.03-18.01 17.97-18.03h0.03c9.93 0 17.98 8.04 18 17.97l0.88 533.4c0.02 9.94-8.03 18.01-17.97 18.03h-0.03z" fill="#707070" p-id="3865"></path><path d="M271.18 529.27c-9.93 0-17.98-8.04-18-17.97-0.02-9.94 8.03-18.01 17.97-18.03l492.36-0.82h0.03c9.93 0 17.98 8.04 18 17.97 0.02 9.94-8.03 18.01-17.97 18.03l-492.36 0.82h-0.03zM763.17 836.07c-5.4 0-10.73-2.42-14.28-7.03-6.06-7.88-4.59-19.18 3.29-25.24 16.88-12.99 32.87-29.08 43.87-44.16 5.86-8.03 17.12-9.8 25.15-3.94 8.03 5.86 9.8 17.12 3.94 25.15-13.12 17.99-31.23 36.28-51 51.49a17.999 17.999 0 0 1-10.97 3.73z" fill="#707070" p-id="3866"></path><path d="M512 924.77c-55.71 0-109.77-10.92-160.67-32.44-49.15-20.79-93.29-50.55-131.2-88.45-37.9-37.9-67.66-82.04-88.45-131.2C110.15 621.77 99.23 567.71 99.23 512s10.92-109.77 32.44-160.67c20.79-49.15 50.55-93.29 88.45-131.2s82.04-67.66 131.2-88.45c50.9-21.53 104.96-32.44 160.67-32.44s109.77 10.92 160.67 32.44c49.15 20.79 93.29 50.55 131.2 88.45 37.9 37.9 67.66 82.04 88.45 131.2 21.53 50.9 32.44 104.96 32.44 160.67 0 73.96-19.79 146.51-57.24 209.83-5.06 8.56-16.1 11.39-24.66 6.33-8.56-5.06-11.39-16.1-6.33-24.66 34.17-57.77 52.23-123.99 52.23-191.5 0-50.87-9.96-100.21-29.6-146.65-18.98-44.86-46.14-85.16-80.75-119.77s-74.9-61.78-119.77-80.75c-46.44-19.64-95.78-29.6-146.65-29.6s-100.21 9.96-146.65 29.6c-44.86 18.98-85.16 46.14-119.77 80.75s-61.78 74.9-80.75 119.77c-19.64 46.44-29.6 95.78-29.6 146.65s9.96 100.21 29.6 146.65c18.98 44.86 46.14 85.16 80.75 119.77s74.9 61.78 119.77 80.75c46.44 19.64 95.78 29.6 146.65 29.6 34.31 0 68.3-4.61 101.04-13.7 9.58-2.66 19.5 2.95 22.16 12.53 2.66 9.58-2.95 19.5-12.53 22.16-35.85 9.96-73.09 15.01-110.65 15.01z" fill="#707070" p-id="3867"></path>
+            </svg>
+        </button>
+        <button class = "operation">
+            <svg t="1720690061772" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2708" width="40" height="40">
+                <path d="M277.333333 211.605333a106.666667 106.666667 0 0 0-106.666666 106.666667v410.517333a106.666667 106.666667 0 0 0 106.666666 106.666667h410.517334a106.666667 106.666667 0 0 0 106.666666-106.666667V386.304a21.333333 21.333333 0 0 1 42.666667 0v342.485333a149.333333 149.333333 0 0 1-149.333333 149.333334H277.333333a149.333333 149.333333 0 0 1-149.333333-149.333334V318.293333a149.333333 149.333333 0 0 1 149.333333-149.333333h342.485334a21.333333 21.333333 0 0 1 0 42.666667H277.333333z" fill="#707070" p-id="2709"></path><path d="M487.104 528.042667a21.333333 21.333333 0 0 1 0-30.165334L829.44 155.584a21.333333 21.333333 0 1 1 30.165333 30.165333L517.290667 528.042667a21.333333 21.333333 0 0 1-30.186667 0z" fill="#707070" p-id="2710"></path>
+            </svg>
+        </button>
+    </div>
     <script src="alarm.js"></script>
 </body>
 </html>
