--- a/stopwatchpage.html
+++ b/stopwatchpage.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Stopwatch</title>
     <link rel="stylesheet" type="text/css" href="./stopwatch.css">
 </head>
+
 <body>
+    <svg id="clock" xmlns="http://www.w3.org/2000/svg" width="400" height="400">
+        <circle cx="200" cy="200" r="180" stroke="black" stroke-width="2" fill="Lavender" />
+        <line x1="200" y1="200" x2="200" y2="90" stroke="black" stroke-width="5" id="hour-hand" />
+        <line x1="200" y1="200" x2="200" y2="50" stroke="black" stroke-width="3" id="minute-hand" />
+        <line x1="200" y1="200" x2="200" y2="30" stroke="red" stroke-width="1" id="second-hand" />
+        <circle cx="200" cy="200" r="4" stroke="black" stroke-width="2" fill="gray" />
+
+        <g id="numbers" transform="translate(200,200)">
+            <text x="0" y="-150" class="number">12</text>
+            <text x="160" y="10" class="number">3</text>
+            <text x="0" y="160" class="number">6</text>
+            <text x="-160" y="10" class="number">9</text>
+        </g>
+
+        <g id="ticks" transform="translate(200,200)">
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(30)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(60)" />
+            <line x1="0" y1="-170" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(90)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(120)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(150)" />
+            <line x1="0" y1="-170" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(180)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(210)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(240)" />
+            <line x1="0" y1="-170" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(270)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(300)" />
+            <line x1="0" y1="-160" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(330)" />
+            <line x1="0" y1="-170" x2="0" y2="-180" stroke="black" stroke-width="1" transform="rotate(360)" />
+        </g>
+    </svg>
+
     <div id="stopwatch">00:00:00.000</div>
-    <button onclick="startStopwatch()">开始</button>
-    <button onclick="stopStopwatch()">停止</button>
-    <button onclick="resetStopwatch()">重置</button>
+    <button id="startStopButton" onclick="startStopToggle()">启动</button>
+    <button id="resetLapButton" disabled="true" onclick="resetLapToggle()">复位</button>
     <script src="stopwatch.js"></script>
 </body>
+
 </html>
