--- a/timerpage.html
+++ b/timerpage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./timer.css">
 </head>
 <body>
-    <input type="number" id="hours" value="0" min="0" step="1">
+    <!-- <input type="number" id="hours" value="0" min="0" step="1">
     <label for="hours">小时&nbsp;</label>
     <input type="number" id="minutes" value="0" min="0" step="1">
     <label for="seconds">分钟&nbsp;</label>
@@ -14,7 +14,135 @@
     <label for="minutes">秒</label>
     <button onclick="startTimer()">开始计时</button>
     <button onclick="stopTimer()">停止计时</button>
-    <div id="timerDisplay">00:00:00.000</div>
+    <div id="timerDisplay">00:00:00.000</div> -->
+    <!-- grid布局：支持多闹钟 -->
+    <div id = "grid">
+        <div class = "timerModule", id = "pos1">
+            <div class = "body">
+                <div class = "timerinfo">
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器1</div>
+                </div>
+                <div class = "enlarge">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                        <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class = "operations">
+                <div class = "play">
+                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                        <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
+                    </svg>
+                </div>
+                <div class = "renew">
+                    <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
+                        <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class = "timerModule", id = "pos2">
+            <div class = "body">
+                <div class = "timerinfo">
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器2</div>
+                </div>
+                <div class = "enlarge">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                        <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class = "operations">
+                <div class = "play">
+                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                        <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
+                    </svg>
+                </div>
+                <div class = "renew">
+                    <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
+                        <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
+                    </svg>
+                </div>
+            </div>
+        </div><div class = "timerModule", id = "pos3">
+            <div class = "body">
+                <div class = "timerinfo">
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器3</div>
+                </div>
+                <div class = "enlarge">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                        <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class = "operations">
+                <div class = "play">
+                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                        <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
+                    </svg>
+                </div>
+                <div class = "renew">
+                    <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
+                        <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    <!-- 模态框 -->
+    <!-- <div id = "modal">
+        <div id = "modalwindow">
+            <div id = "head">
+                <div id = "text">编辑闹钟</div>
+                <button id = "delete"  onclick="cancelModal()">
+                    <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
+                        <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
+                        <path d="M510.662539 861.276918c11.012821 0 19.954471-8.92937 19.954471-19.942191L530.61701 294.912753c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191L490.708068 841.334727C490.708068 852.347548 499.649717 861.276918 510.662539 861.276918z" fill="#c41a04" p-id="5961"></path>
+                        <path d="M374.562814 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L394.517285 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C354.608344 792.519951 363.549993 801.449321 374.562814 801.449321z" fill="#c41a04" p-id="5962"></path>
+                        <path d="M649.832182 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L669.786653 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C629.877711 792.519951 638.81936 801.449321 649.832182 801.449321z" fill="#c41a04" p-id="5963"></path>
+                    </svg>
+                </button>
+            </div>
+            <div id = "body">
+                <div id = "clock"></div>
+                <div id = "timeInput">
+                    <input type="number" id="hour-input" min="0" max="23" value="12">
+                    <label for="hour-input">&nbsp;:&nbsp;</label>
+                    <input type="number" id="minute-input" min="0" max="59" value="0">
+                    <label for="minute-input">分&nbsp;</label>
+                    <input type="number" id="second-input" min="0" max="59" value="0">
+                    <label for="second-input">秒&nbsp;</label>
+                </div>
+                <div id = "nameInput">
+                    <div id = "text">名称：</div>
+                    <input type="text" value="闹钟">
+                </div>
+            </div>
+            <div id = "foot">
+                <button onclick="cancelModal()" id = "save">保存</button>
+                <button onclick="cancelModal()">取消</button>
+            </div>
+        </div>
+    </div> -->
+    <!-- 编辑按钮 -->
+    <div id = "editButton">
+        <button class = "operation">
+            <svg t="1720690146290" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3864" width="40" height="40">
+                <path d="M517.8 795.56c-9.93 0-17.98-8.04-18-17.97l-0.88-533.4c-0.02-9.94 8.03-18.01 17.97-18.03h0.03c9.93 0 17.98 8.04 18 17.97l0.88 533.4c0.02 9.94-8.03 18.01-17.97 18.03h-0.03z" fill="#707070" p-id="3865"></path>
+                <path d="M271.18 529.27c-9.93 0-17.98-8.04-18-17.97-0.02-9.94 8.03-18.01 17.97-18.03l492.36-0.82h0.03c9.93 0 17.98 8.04 18 17.97 0.02 9.94-8.03 18.01-17.97 18.03l-492.36 0.82h-0.03zM763.17 836.07c-5.4 0-10.73-2.42-14.28-7.03-6.06-7.88-4.59-19.18 3.29-25.24 16.88-12.99 32.87-29.08 43.87-44.16 5.86-8.03 17.12-9.8 25.15-3.94 8.03 5.86 9.8 17.12 3.94 25.15-13.12 17.99-31.23 36.28-51 51.49a17.999 17.999 0 0 1-10.97 3.73z" fill="#707070" p-id="3866"></path>
+                <path d="M512 924.77c-55.71 0-109.77-10.92-160.67-32.44-49.15-20.79-93.29-50.55-131.2-88.45-37.9-37.9-67.66-82.04-88.45-131.2C110.15 621.77 99.23 567.71 99.23 512s10.92-109.77 32.44-160.67c20.79-49.15 50.55-93.29 88.45-131.2s82.04-67.66 131.2-88.45c50.9-21.53 104.96-32.44 160.67-32.44s109.77 10.92 160.67 32.44c49.15 20.79 93.29 50.55 131.2 88.45 37.9 37.9 67.66 82.04 88.45 131.2 21.53 50.9 32.44 104.96 32.44 160.67 0 73.96-19.79 146.51-57.24 209.83-5.06 8.56-16.1 11.39-24.66 6.33-8.56-5.06-11.39-16.1-6.33-24.66 34.17-57.77 52.23-123.99 52.23-191.5 0-50.87-9.96-100.21-29.6-146.65-18.98-44.86-46.14-85.16-80.75-119.77s-74.9-61.78-119.77-80.75c-46.44-19.64-95.78-29.6-146.65-29.6s-100.21 9.96-146.65 29.6c-44.86 18.98-85.16 46.14-119.77 80.75s-61.78 74.9-80.75 119.77c-19.64 46.44-29.6 95.78-29.6 146.65s9.96 100.21 29.6 146.65c18.98 44.86 46.14 85.16 80.75 119.77s74.9 61.78 119.77 80.75c46.44 19.64 95.78 29.6 146.65 29.6 34.31 0 68.3-4.61 101.04-13.7 9.58-2.66 19.5 2.95 22.16 12.53 2.66 9.58-2.95 19.5-12.53 22.16-35.85 9.96-73.09 15.01-110.65 15.01z" fill="#707070" p-id="3867"></path>
+            </svg>
+        </button>
+        <button class = "operation">
+            <svg t="1720690061772" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2708" width="40" height="40">
+                <path d="M277.333333 211.605333a106.666667 106.666667 0 0 0-106.666666 106.666667v410.517333a106.666667 106.666667 0 0 0 106.666666 106.666667h410.517334a106.666667 106.666667 0 0 0 106.666666-106.666667V386.304a21.333333 21.333333 0 0 1 42.666667 0v342.485333a149.333333 149.333333 0 0 1-149.333333 149.333334H277.333333a149.333333 149.333333 0 0 1-149.333333-149.333334V318.293333a149.333333 149.333333 0 0 1 149.333333-149.333333h342.485334a21.333333 21.333333 0 0 1 0 42.666667H277.333333z" fill="#707070" p-id="2709"></path>
+                <path d="M487.104 528.042667a21.333333 21.333333 0 0 1 0-30.165334L829.44 155.584a21.333333 21.333333 0 1 1 30.165333 30.165333L517.290667 528.042667a21.333333 21.333333 0 0 1-30.186667 0z" fill="#707070" p-id="2710"></path>
+            </svg>
+        </button>
+    </div>
+    <!-- 代码需支持多计时器 -->
     <script src="timer.js"></script>
 </body>
 </html>
