--- a/clock.html
+++ b/clock.html
@@ -13,8 +13,8 @@
         <circle cx="200" cy="200" r="180" stroke="black" stroke-width="2" fill="Lavender" />
         <line x1="200" y1="200" x2="200" y2="90" stroke="black" stroke-width="5" id="hour-hand" />
         <line x1="200" y1="200" x2="200" y2="50" stroke="black" stroke-width="3" id="minute-hand" />
-        <line x1="200" y1="200" x2="200" y2="30" stroke="red" stroke-width="1" id="second-hand" />
-        <circle cx="200" cy="200" r="4" stroke="black" stroke-width="2" fill="gray" />
+        <line x1="200" y1="200" x2="200" y2="30" stroke="red" stroke-width="3" id="second-hand" />
+        <circle cx="200" cy="200" r="4" stroke="black" stroke-width="2" fill="gray" id="center" />
 
         <g id="numbers" transform="translate(200,200)">
             <text x="0" y="-150" class="number">12</text>
