--- a/timerpage.html
+++ b/timerpage.html
@@ -23,19 +23,19 @@
                     <div class = "time">00:00:00</div>
                     <div class = "name">计时器1</div>
                 </div>
-                <div class = "enlarge">
-                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                <div class = "enlarge" onclick="enlarge(this)">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
                 </div>
             </div>
             <div class = "operations">
-                <div class = "play">
+                <div class = "play" onclick="play(this)">
                     <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
                         <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
                     </svg>
                 </div>
-                <div class = "renew">
+                <div class = "renew" onclick="renew(this)">
                     <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
                         <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
                     </svg>
@@ -49,7 +49,7 @@
                     <div class = "name">计时器2</div>
                 </div>
                 <div class = "enlarge">
-                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
                 </div>
@@ -73,7 +73,7 @@
                     <div class = "name">计时器3</div>
                 </div>
                 <div class = "enlarge">
-                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="32" height="32">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
                 </div>
@@ -95,7 +95,7 @@
     <!-- <div id = "modal">
         <div id = "modalwindow">
             <div id = "head">
-                <div id = "text">编辑闹钟</div>
+                <div id = "text">编辑计时器</div>
                 <button id = "delete"  onclick="cancelModal()">
                     <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
                         <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
@@ -106,14 +106,12 @@
                 </button>
             </div>
             <div id = "body">
-                <div id = "clock"></div>
                 <div id = "timeInput">
                     <input type="number" id="hour-input" min="0" max="23" value="12">
                     <label for="hour-input">&nbsp;:&nbsp;</label>
                     <input type="number" id="minute-input" min="0" max="59" value="0">
-                    <label for="minute-input">分&nbsp;</label>
+                    <label for="minute-input">&nbsp;:&nbsp;</label>
                     <input type="number" id="second-input" min="0" max="59" value="0">
-                    <label for="second-input">秒&nbsp;</label>
                 </div>
                 <div id = "nameInput">
                     <div id = "text">名称：</div>
