improve timer page

--- a/timerpage.html
+++ b/timerpage.html
@@ -31,8 +31,11 @@
             </div>
             <div class = "operations">
                 <div class = "play" onclick="play(this)">
-                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                    <svg class = "playIcon" t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
                         <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
+                    </svg>
+                    <svg class = "pauseIcon" t="1721052216934" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2469" width="26" height="26">
+                        <path d="M426.666667 138.666667v746.666666a53.393333 53.393333 0 0 1-53.333334 53.333334H266.666667a53.393333 53.393333 0 0 1-53.333334-53.333334V138.666667a53.393333 53.393333 0 0 1 53.333334-53.333334h106.666666a53.393333 53.393333 0 0 1 53.333334 53.333334z m330.666666-53.333334H650.666667a53.393333 53.393333 0 0 0-53.333334 53.333334v746.666666a53.393333 53.393333 0 0 0 53.333334 53.333334h106.666666a53.393333 53.393333 0 0 0 53.333334-53.333334V138.666667a53.393333 53.393333 0 0 0-53.333334-53.333334z" fill="#ffffff" p-id="2470"></path>
                     </svg>
                 </div>
                 <div class = "renew" onclick="renew(this)">
@@ -48,19 +51,22 @@
                     <div class = "time">00:00:00</div>
                     <div class = "name">计时器2</div>
                 </div>
-                <div class = "enlarge">
+                <div class = "enlarge" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
                 </div>
             </div>
             <div class = "operations">
-                <div class = "play">
-                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                <div class = "play" onclick="play(this)">
+                    <svg class = "playIcon" t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
                         <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
                     </svg>
+                    <svg class = "pauseIcon" t="1721052216934" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2469" width="26" height="26">
+                        <path d="M426.666667 138.666667v746.666666a53.393333 53.393333 0 0 1-53.333334 53.333334H266.666667a53.393333 53.393333 0 0 1-53.333334-53.333334V138.666667a53.393333 53.393333 0 0 1 53.333334-53.333334h106.666666a53.393333 53.393333 0 0 1 53.333334 53.333334z m330.666666-53.333334H650.666667a53.393333 53.393333 0 0 0-53.333334 53.333334v746.666666a53.393333 53.393333 0 0 0 53.333334 53.333334h106.666666a53.393333 53.393333 0 0 0 53.333334-53.333334V138.666667a53.393333 53.393333 0 0 0-53.333334-53.333334z" fill="#ffffff" p-id="2470"></path>
+                    </svg>
                 </div>
-                <div class = "renew">
+                <div class = "renew" onclick="renew(this)">
                     <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
                         <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
                     </svg>
@@ -72,19 +78,22 @@
                     <div class = "time">00:00:00</div>
                     <div class = "name">计时器3</div>
                 </div>
-                <div class = "enlarge">
+                <div class = "enlarge" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
                 </div>
             </div>
             <div class = "operations">
-                <div class = "play">
-                    <svg t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                <div class = "play" onclick="play(this)">
+                    <svg class = "playIcon" t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
                         <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
                     </svg>
+                    <svg class = "pauseIcon" t="1721052216934" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2469" width="26" height="26">
+                        <path d="M426.666667 138.666667v746.666666a53.393333 53.393333 0 0 1-53.333334 53.333334H266.666667a53.393333 53.393333 0 0 1-53.333334-53.333334V138.666667a53.393333 53.393333 0 0 1 53.333334-53.333334h106.666666a53.393333 53.393333 0 0 1 53.333334 53.333334z m330.666666-53.333334H650.666667a53.393333 53.393333 0 0 0-53.333334 53.333334v746.666666a53.393333 53.393333 0 0 0 53.333334 53.333334h106.666666a53.393333 53.393333 0 0 0 53.333334-53.333334V138.666667a53.393333 53.393333 0 0 0-53.333334-53.333334z" fill="#ffffff" p-id="2470"></path>
+                    </svg>
                 </div>
-                <div class = "renew">
+                <div class = "renew" onclick="renew(this)">
                     <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
                         <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
                     </svg>
