--- a/alarmpage.html
+++ b/alarmpage.html
@@ -29,7 +29,7 @@
         <div class = "alarmModule", id = "pos2">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
-                <div class = "name">闹钟1</div>
+                <div class = "name">闹钟2</div>
             </div>
             <div class = "deleteIcon">
                 <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
@@ -47,7 +47,7 @@
         <div class = "alarmModule", id = "pos3">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
-                <div class = "name">闹钟1</div>
+                <div class = "name">闹钟3</div>
             </div>
             <div class = "deleteIcon">
                 <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
@@ -71,7 +71,7 @@
         <div id = "modalwindow">
             <div id = "head">
                 <div id = "text">编辑闹钟</div>
-                <button id = "delete"  onclick="cancelModal()">
+                <button id = "delete">
                     <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
                         <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
                         <path d="M510.662539 861.276918c11.012821 0 19.954471-8.92937 19.954471-19.942191L530.61701 294.912753c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191L490.708068 841.334727C490.708068 852.347548 499.649717 861.276918 510.662539 861.276918z" fill="#c41a04" p-id="5961"></path>
@@ -96,14 +96,14 @@
                 </div>
             </div>
             <div id = "foot">
-                <button onclick="cancelModal()" id = "save">保存</button>
-                <button onclick="cancelModal()">取消</button>
+                <button onclick="cancelModal(event)" id = "save">保存</button>
+                <button onclick="cancelModal(event)">取消</button>
             </div>
         </div>
     </div>
     <!-- 编辑按钮 -->
     <div id = "editButton">
-        <button class = "operation">
+        <button class = "operation" onclick="addAlarm()">
             <svg t="1720690146290" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3864" width="40" height="40">
                 <path d="M517.8 795.56c-9.93 0-17.98-8.04-18-17.97l-0.88-533.4c-0.02-9.94 8.03-18.01 17.97-18.03h0.03c9.93 0 17.98 8.04 18 17.97l0.88 533.4c0.02 9.94-8.03 18.01-17.97 18.03h-0.03z" fill="#707070" p-id="3865"></path>
                 <path d="M271.18 529.27c-9.93 0-17.98-8.04-18-17.97-0.02-9.94 8.03-18.01 17.97-18.03l492.36-0.82h0.03c9.93 0 17.98 8.04 18 17.97 0.02 9.94-8.03 18.01-17.97 18.03l-492.36 0.82h-0.03zM763.17 836.07c-5.4 0-10.73-2.42-14.28-7.03-6.06-7.88-4.59-19.18 3.29-25.24 16.88-12.99 32.87-29.08 43.87-44.16 5.86-8.03 17.12-9.8 25.15-3.94 8.03 5.86 9.8 17.12 3.94 25.15-13.12 17.99-31.23 36.28-51 51.49a17.999 17.999 0 0 1-10.97 3.73z" fill="#707070" p-id="3866"></path>
