--- a/alarmpage.html
+++ b/alarmpage.html
@@ -8,7 +8,7 @@
 <body>
     <!-- grid布局：支持多闹钟 -->
     <div id = "grid">
-        <div class = "alarmModule", id = "pos1">
+        <div class = "alarmModule" id = "pos1">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
                 <div class = "name">闹钟1</div>
@@ -26,7 +26,7 @@
                 <span class = "slider"></span>
             </label>
         </div>
-        <div class = "alarmModule", id = "pos2">
+        <div class = "alarmModule" id = "pos2">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
                 <div class = "name">闹钟2</div>
@@ -44,7 +44,7 @@
                 <span class = "slider"></span>
             </label>
         </div>
-        <div class = "alarmModule", id = "pos3">
+        <div class = "alarmModule" id = "pos3">
             <div class = "alarminfo">
                 <div class = "time">00:00</div>
                 <div class = "name">闹钟3</div>
