--- a/timerpage.html
+++ b/timerpage.html
@@ -17,13 +17,13 @@
     <div id="timerDisplay">00:00:00.000</div> -->
     <!-- grid布局：支持多闹钟 -->
     <div id = "grid">
-        <div class = "timerModule", id = "pos1">
+        <div class = "timerModule" id = "pos1" onclick = "editTimer(event)">
             <div class = "body">
                 <div class = "timerinfo">
                     <div class = "time">00:00:00</div>
                     <div class = "name">计时器1</div>
                 </div>
-                <div class = "enlarge" onclick="enlarge(this)">
+                <div class = "enlargeIcon" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
@@ -36,6 +36,11 @@
                         <path d="M649.832182 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L669.786653 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C629.877711 792.519951 638.81936 801.449321 649.832182 801.449321z" fill="#c41a04" p-id="5963"></path>
                     </svg>
                 </div>
+                <div class = "shrinkIcon" onclick="shrink(this)">
+                    <svg t="1721459361718" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="24150" width="26" height="26">
+                        <path d="M745.12399 745.104035l185.747471 0c16.093537 0 29.283953-13.135158 29.283953-29.321816 0-16.303314-13.114692-29.323862-29.283953-29.323862L715.764312 686.458357c-8.037047 0-15.34857 3.28379-20.656459 8.591679-5.383614 5.306866-8.628518 12.617365-8.628518 20.694321l0 215.106126c0 16.07307 13.134135 29.283953 29.321816 29.283953 16.303314 0 29.321816-13.114692 29.321816-29.283953L745.122967 745.104035zM275.966751 745.104035l-185.747471 0c-16.093537 0-29.283953-13.135158-29.283953-29.321816 0-16.303314 13.114692-29.323862 29.283953-29.323862l215.107149 0c8.037047 0 15.34857 3.28379 20.656459 8.591679 5.383614 5.306866 8.628518 12.617365 8.628518 20.694321l0 215.106126c0 16.07307-13.133112 29.283953-29.321816 29.283953-16.303314 0-29.321816-13.114692-29.321816-29.283953L275.967774 745.104035zM745.12399 275.945773l185.747471 0c16.093537 0 29.283953 13.134135 29.283953 29.322839 0 16.303314-13.114692 29.321816-29.283953 29.321816L715.764312 334.590428c-8.037047 0-15.34857-3.282766-20.656459-8.590656-5.383614-5.306866-8.628518-12.618389-8.628518-20.693298L686.479335 90.199325c0-16.074094 13.134135-29.283953 29.321816-29.283953 16.303314 0 29.321816 13.114692 29.321816 29.283953L745.122967 275.945773zM275.966751 275.945773l-185.747471 0c-16.093537 0-29.283953 13.134135-29.283953 29.322839 0 16.303314 13.114692 29.321816 29.283953 29.321816l215.107149 0c8.037047 0 15.34857-3.282766 20.656459-8.590656 5.383614-5.306866 8.628518-12.618389 8.628518-20.693298L334.611405 90.199325c0-16.074094-13.133112-29.283953-29.321816-29.283953-16.303314 0-29.321816 13.114692-29.321816 29.283953L275.967774 275.945773z" fill="#707070" p-id="24151"></path>
+                    </svg>
+                </div> 
             </div>
             <div class = "operations">
                 <div class = "play" onclick="play(this)">
@@ -53,48 +58,13 @@
                 </div>
             </div>
         </div>
-        <div class = "timerModule", id = "pos2">
+        <div class = "timerModule" id = "pos2" onclick = "editTimer(this)">
             <div class = "body">
                 <div class = "timerinfo">
                     <div class = "time">00:00:00</div>
                     <div class = "name">计时器2</div>
                 </div>
-                <div class = "enlarge" onclick="enlarge(this)">
-                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
-                        <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
-                    </svg>
-                </div>
-                <div class = "deleteIcon">
-                    <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
-                        <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
-                        <path d="M510.662539 861.276918c11.012821 0 19.954471-8.92937 19.954471-19.942191L530.61701 294.912753c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191L490.708068 841.334727C490.708068 852.347548 499.649717 861.276918 510.662539 861.276918z" fill="#c41a04" p-id="5961"></path>
-                        <path d="M374.562814 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L394.517285 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C354.608344 792.519951 363.549993 801.449321 374.562814 801.449321z" fill="#c41a04" p-id="5962"></path>
-                        <path d="M649.832182 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L669.786653 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C629.877711 792.519951 638.81936 801.449321 649.832182 801.449321z" fill="#c41a04" p-id="5963"></path>
-                    </svg>
-                </div>
-            </div>
-            <div class = "operations">
-                <div class = "play" onclick="play(this)">
-                    <svg class = "playIcon" t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
-                        <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
-                    </svg>
-                    <svg class = "pauseIcon" t="1721052216934" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2469" width="26" height="26">
-                        <path d="M426.666667 138.666667v746.666666a53.393333 53.393333 0 0 1-53.333334 53.333334H266.666667a53.393333 53.393333 0 0 1-53.333334-53.333334V138.666667a53.393333 53.393333 0 0 1 53.333334-53.333334h106.666666a53.393333 53.393333 0 0 1 53.333334 53.333334z m330.666666-53.333334H650.666667a53.393333 53.393333 0 0 0-53.333334 53.333334v746.666666a53.393333 53.393333 0 0 0 53.333334 53.333334h106.666666a53.393333 53.393333 0 0 0 53.333334-53.333334V138.666667a53.393333 53.393333 0 0 0-53.333334-53.333334z" fill="#ffffff" p-id="2470"></path>
-                    </svg>
-                </div>
-                <div class = "renew" onclick="renew(this)">
-                    <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
-                        <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
-                    </svg>
-                </div>
-            </div>
-        </div><div class = "timerModule", id = "pos3">
-            <div class = "body">
-                <div class = "timerinfo">
-                    <div class = "time">00:00:00</div>
-                    <div class = "name">计时器3</div>
-                </div>
-                <div class = "enlarge" onclick="enlarge(this)">
+                <div class = "enlargeIcon" onclick="enlarge(this)">
                     <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
                         <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
                     </svg>
@@ -124,12 +94,49 @@
                 </div>
             </div>
         </div>
+        <div class = "timerModule" id = "pos3" onclick = "editTimer(this)">
+            <div class = "body">
+                <div class = "timerinfo">
+                    <div class = "time">00:00:00</div>
+                    <div class = "name">计时器3</div>
+                </div>
+                <div class = "enlargeIcon" onclick="enlarge(this)">
+                    <svg t="1720971900426" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1590" width="26" height="26">
+                        <path d="M189.824 502.336a32 32 0 0 1 31.488 26.24l0.512 5.76v264.512h255.104a32 32 0 0 1 31.488 26.24l0.512 5.76a32 32 0 0 1-26.24 31.488l-5.76 0.512H189.824a32 32 0 0 1-31.488-26.24l-0.512-5.76V534.336a32 32 0 0 1 32-32z m644.352-341.12a32 32 0 0 1 31.488 26.24l0.512 5.76V489.6a32 32 0 0 1-63.488 5.76l-0.512-5.76V225.152H547.008a32 32 0 0 1-31.488-26.24l-0.512-5.76a32 32 0 0 1 26.24-31.488l5.76-0.512h287.104z" p-id="1591" fill="#707070"></path>
+                    </svg>
+                </div>
+                <div class = "deleteIcon">
+                    <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
+                        <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
+                        <path d="M510.662539 861.276918c11.012821 0 19.954471-8.92937 19.954471-19.942191L530.61701 294.912753c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191L490.708068 841.334727C490.708068 852.347548 499.649717 861.276918 510.662539 861.276918z" fill="#c41a04" p-id="5961"></path>
+                        <path d="M374.562814 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L394.517285 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C354.608344 792.519951 363.549993 801.449321 374.562814 801.449321z" fill="#c41a04" p-id="5962"></path>
+                        <path d="M649.832182 801.449321c11.012821 0 19.954471-8.92937 19.954471-19.942191L669.786653 354.74035c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191l0 426.76678C629.877711 792.519951 638.81936 801.449321 649.832182 801.449321z" fill="#c41a04" p-id="5963"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class = "operations">
+                <div class = "play" onclick="play(this)">
+                    <svg class = "playIcon" t="1720974438213" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3087" width="24" height="24">
+                        <path d="M161.2 839.9v-654c0-56.1 60.7-91.1 109.3-63.1l566.3 327c48.6 28 48.6 98.1 0 126.2L270.4 903c-48.5 28-109.2-7.1-109.2-63.1z" fill="#ffffff" p-id="3088"></path>
+                    </svg>
+                    <svg class = "pauseIcon" t="1721052216934" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2469" width="26" height="26">
+                        <path d="M426.666667 138.666667v746.666666a53.393333 53.393333 0 0 1-53.333334 53.333334H266.666667a53.393333 53.393333 0 0 1-53.333334-53.333334V138.666667a53.393333 53.393333 0 0 1 53.333334-53.333334h106.666666a53.393333 53.393333 0 0 1 53.333334 53.333334z m330.666666-53.333334H650.666667a53.393333 53.393333 0 0 0-53.333334 53.333334v746.666666a53.393333 53.393333 0 0 0 53.333334 53.333334h106.666666a53.393333 53.393333 0 0 0 53.333334-53.333334V138.666667a53.393333 53.393333 0 0 0-53.333334-53.333334z" fill="#ffffff" p-id="2470"></path>
+                    </svg>
+                </div>
+                <div class = "renew" onclick="renew(this)">
+                    <svg t="1720975514152" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4195" width="24" height="24">
+                        <path d="M512 142.9c-31.1 0-52.3 0.8-88.9 0V62.8L311.9 174 423 285v-75.6c29.1-3 41.3-3 88.9-4.4 191.2-5.7 346.9 155.7 346.9 346.9S703.1 898.8 511.9 898.8 165 743.1 165 551.9c0-44.4 8.9-88.9 24.5-126.7 13.3-13.3 15.5-24.5 11.1-37.8-4.4-13.3-13.3-22.2-31.1-22.2-22.3 0-35.6 31.1-35.6 31.1-20 46.7-31.1 102.3-31.1 155.7 0 226.9 182.4 409.2 409.2 409.2 226.9 0 409.2-182.4 409.2-409.2-0.1-226.8-182.4-409.1-409.2-409.1z" fill="#707070" p-id="4196"></path>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- 模态框 -->
-    <!-- <div id = "modal">
+    <div id = "modal">
         <div id = "modalwindow">
             <div id = "head">
                 <div id = "text">编辑计时器</div>
-                <button id = "delete"  onclick="cancelModal()">
+                <button id = "delete"  onclick="cancelModal(event)">
                     <svg t="1720709438677" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5959" width="32" height="32">
                         <path d="M909.050991 169.476903l-217.554898 0 0-31.346939c0-39.5866-32.205493-71.792093-71.793116-71.792093L408.15591 66.337871c-39.5866 0-71.792093 32.205493-71.792093 71.792093l0 31.346939L113.349581 169.476903c-11.013845 0-19.942191 8.940626-19.942191 19.954471s8.928347 19.954471 19.942191 19.954471l84.264149 0 0 640.687918c0 60.479443 49.203632 109.683075 109.683075 109.683075l416.474366 0c60.479443 0 109.683075-49.203632 109.683075-109.683075L833.454246 209.385844l75.595722 0c11.012821 0 19.942191-8.940626 19.942191-19.954471S920.063813 169.476903 909.050991 169.476903zM376.2482 138.130987c0-17.593703 14.314007-31.907711 31.907711-31.907711l211.547067 0c17.593703 0 31.907711 14.314007 31.907711 31.907711l0 31.346939L376.2482 169.477926 376.2482 138.130987zM793.569864 850.074785c0 38.486546-31.312146 69.798692-69.798692 69.798692L307.297828 919.873478c-38.486546 0-69.798692-31.312146-69.798692-69.798692L237.499136 211.042577l556.070728 0L793.569864 850.074785z" fill="#c41a04" p-id="5960"></path>
                         <path d="M510.662539 861.276918c11.012821 0 19.954471-8.92937 19.954471-19.942191L530.61701 294.912753c0-11.013845-8.94165-19.942191-19.954471-19.942191s-19.954471 8.928347-19.954471 19.942191L490.708068 841.334727C490.708068 852.347548 499.649717 861.276918 510.662539 861.276918z" fill="#c41a04" p-id="5961"></path>
@@ -140,23 +147,23 @@
             </div>
             <div id = "body">
                 <div id = "timeInput">
-                    <input type="number" id="hour-input" min="0" max="23" value="12">
-                    <label for="hour-input">&nbsp;:&nbsp;</label>
-                    <input type="number" id="minute-input" min="0" max="59" value="0">
-                    <label for="minute-input">&nbsp;:&nbsp;</label>
-                    <input type="number" id="second-input" min="0" max="59" value="0">
+                    <input type = "number" id = "hour-input" min = "0" max = "23" value = "12">
+                    <label for = "hour-input">&nbsp;:&nbsp;</label>
+                    <input type = "number" id = "minute-input" min = "0" max = "59" value = "0">
+                    <label for = "minute-input">&nbsp;:&nbsp;</label>
+                    <input type = "number" id = "second-input" min = "0" max = "59" value = "0">
                 </div>
                 <div id = "nameInput">
                     <div id = "text">名称：</div>
-                    <input type="text" value="闹钟">
+                    <input type="text" value="计时器">
                 </div>
             </div>
             <div id = "foot">
-                <button onclick="cancelModal()" id = "save">保存</button>
-                <button onclick="cancelModal()">取消</button>
+                <button onclick="cancelModal(event)" id = "save">保存</button>
+                <button onclick="cancelModal(event)">取消</button>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- 编辑按钮 -->
     <div id = "editButton">
         <button class = "operation">
