--- a/nav.html
+++ b/nav.html
@@ -14,19 +14,20 @@
 <body>
     <main class="bg">
         <!-- 四个功能：时钟、闹钟、秒表、计时器 -->
-        <div class="divItem">
+        <div class="divItem" onclick = "focusDiv(this)">
             <a href="clock.html" target="content">时钟</a>
         </div>
-        <div class="divItem">
+        <div class="divItem" onclick = "focusDiv(this)">
             <a href="alarmpage.html" target="content">闹钟</a>
         </div>
-        <div class="divItem">
+        <div class="divItem" onclick = "focusDiv(this)">
             <a href="stopwatchpage.html" target="content">秒表</a>
         </div>
-        <div class = "divItem">
+        <div class = "divItem" onclick = "focusDiv(this)">
             <a href="timerpage.html" target="content">计时器</a>
         </div>
     </main>
+    <script src="nav.js"></script>
 </body>
 
 </html>
